앱설치기능 추가

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+    <link rel="manifest" href="%sveltekit.assets%/manifest.webmanifest" crossorigin="anonymous"/>
 		<meta name="viewport" content="width=device-width, initial-scale=0.8" />
 		%sveltekit.head%
 	</head>
